// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 6,
      "marginHorizontal": 10,
      "marginVertical": 5,
      "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 23.04,
            "textAlign": "center",
          }
        }
      >
        Boom!
      </Text>
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
            "textAlign": "center",
          }
        }
      >
        What?
      </Text>
    </View>
  </View>
</View>
`;

exports[`the Card component should render with an error inside an object 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 6,
      "marginHorizontal": 10,
      "marginVertical": 5,
      "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 23.04,
            "textAlign": "center",
          }
        }
      >
        Uh oh!
      </Text>
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
            "textAlign": "center",
          }
        }
      >
        Errors, errors, and more errors
      </Text>
    </View>
  </View>
</View>
`;

exports[`the Card component should render with an error message inside an object 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 6,
      "marginHorizontal": 10,
      "marginVertical": 5,
      "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 6,
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 20,
          "paddingVertical": 15,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Bold",
            "fontSize": 16,
            "lineHeight": 23.04,
            "textAlign": "center",
          }
        }
      >
        Uh oh!
      </Text>
      <Text
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
            "textAlign": "center",
          }
        }
      >
        You have discovered an error message. Do you open it?
      </Text>
    </View>
  </View>
</View>
`;
